--- a/CSM-Vue/.vscode/settings.json
+++ b/CSM-Vue/.vscode/settings.json
@@ -1,5 +1,13 @@
 // 将设置放入此文件中以覆盖默认值和用户设置。
 {
     "editor.tabSize": 2,
-    "editor.detectIndentation": false
-}
+    "editor.detectIndentation": false,
+    "files.exclude": {
+      "**/.git": true,
+      "**/.svn": true,
+      "**/.hg": true,
+      "**/CVS": true,
+      "**/.DS_Store": true
+      // "**/node_modules":true
+    }
+  }
